--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
+#player {
+background-color:black;
+width: 800px;
+height: 600px
+}
+.js-video-container {
+width: 100%;
+height: 100%
+}
+.buttons {
+background-color:black;
+width: 100%
+}
+
 .js-play-button {
 border-style: none
 }
