--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,9 @@ height: 100%
 background-color:black;
 width: 100%
 }
-
 .js-play-button {
-border-style: none
+border-style: none;
+color: white
 }
 .js-play-button:hover {
 cursor: pointer
