--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ width: 100%
 border-style: none;
 color: white;
 background-color: transparent;
-visibility: visible
+visibility: visible;
 }
 .js-play-button:hover {
 cursor: pointer
