--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,48 @@
+html, body {
+    height: 100%;
+}
+
 .player {
-background-color:black;
-width: 800px;
-height: 600px;
-box-shadow: 0 0 10px rgba(0,0,0,100)
+    background-color:black;
+    box-shadow: 0 0 10px rgba(0,0,0,100);
+    display: flex;
+    flex-direction: column;
+    height: 80%;
+    width: 80%;
+    margin: auto;
 }
+
+
 .js-video-container {
-width: 100%;
-height: 100%
+    display: flex;
+    flex-grow: 1;
 }
+
+
 .buttons {
-background-color:black;
-width: 100%
+    background-color:black;
+    display: flex;
+    flex-grow: 0;
 }
+
 .js-play-button {
-border-style: none;
-color: white;
-background-color: transparent;
-visibility: visible;
+    border-style: none;
+    color: white;
+    background-color: transparent;
+    visibility: visible;
 }
+
 .js-play-button:hover {
-cursor: pointer
+    cursor: pointer;
 }
+
 .js-pause-button {
-border-style: none;
-color: white;
-background-color: transparent;
-visibility: visible
+    border-style: none;
+    color: white;
+    background-color: transparent;
+    visibility: visible;
 }
+
 .js-pause-button:hover {
-cursor: pointer
+    cursor: pointer;
 }
